# orig

./: CMakeLists.txt
Project1/: Project1.sln  Project1.vcxproj  Source.cpp
Project3/: Project3.sln  Project3.vcxproj  Source.cpp  Source2.cpp
hm/: hm.sln  hm.vcxproj  main.cpp  main2.cpp  main3.cpp
hm1/: Lesson1.cpp
hm2/: lesson2.sln
hm2/lesson2/: GeometricFigureException.cpp  GeometricFigureException.h  Source.cpp  Triangle.cpp  Triangle.h  lesson2.vcxproj  lesson2.vcxproj.filters
hm2/lesson2/x64/Debug/: lesson2.exe.recipe  lesson2.ilk  vc143.idb
hm2/lesson2/x64/Debug/lesson2.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  lesson2.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
src/: main.cpp
